Update GitHub actions

--- a/.github/workflows/lines-of-code.yml
+++ b/.github/workflows/lines-of-code.yml
@@ -27,18 +27,18 @@ jobs:
             name=$2
         
             if [ -d "$crate_path/src" ] ; then
-                lines_of_code=$(scc -c --no-cocomo -f json -i rs "$crate_path/src" | jq '.[] | .Code');
+                lines_of_code=$(scc -c --no-cocomo -f json -i rs "$crate_path/src" | jq '.[] | .Code')
             else
-                lines_of_code=$(scc -c --no-cocomo -f json -i rs "$crate_path" | jq '.[] | .Code');
+                lines_of_code=$(scc -c --no-cocomo -f json -i rs "$crate_path" | jq '.[] | .Code')
             fi
         
-            echo "\`$name\` has $lines_of_code lines of code" >> $GITHUB_STEP_SUMMARY;
+            echo "\`$name\` has $lines_of_code lines of code" >> $GITHUB_STEP_SUMMARY
 
             curl \
               --header "Content-Type: application/json" \
               --header "X-POST-ACCESS-KEY: ${{ secrets.PROJECTS_POST_ACCESS_KEY }}" \
               --data "{\"project\":\"$name\",\"language\":\"rust\",\"loc\":$lines_of_code}" \
-              https://kaleidawave-projectinformation.web.val.run/update-project;
+              https://project-information-kaleidawave.val.run/update-project
           }
           
           record "parser" "ezno-parser"
