--- a/.github/workflows/performance-and-size.yml
+++ b/.github/workflows/performance-and-size.yml
@@ -4,54 +4,13 @@ on:
   push:
     branches: [main]
   workflow_dispatch:
-  #   inputs:
-  #     paths: 
-  #       default: "[]"
-  #       type: string
-  #       description: Some binaries to build and compare with
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  TEMP:
-    runs-on: ubuntu-latest
-    if: false
-
-    strategy:
-      matrix: 
-        # ref: ${{ fromJson(inputs.paths) }} 
-        ref: [
-          "35dbeb145150906ba91ec8582ebb38650f1c7d34",
-          "506be8be8b6f1de2423ecab6413b31e3cb0ce58c"
-        ]
-      fail-fast: true
-
-    steps:
-    - uses: actions/checkout@v4
-      id: checkout
-      with:
-        ref: ${{ matrix.ref }}
-    - uses: dtolnay/rust-toolchain@stable
-    
-    - name: Build binary
-      run: cargo build --release
-      shell: bash
-
-    - uses: actions/upload-artifact@v4
-      with:
-        # '-${{ steps.get-branch.outputs.branch }}'
-        name: binary-${{ runner.os }}${{ runner.arch }}-TEMP-${{ matrix.ref }}
-        path: target/release/ezno
-        retention-days: 30
-
   run-benchmarks:
     runs-on: ubuntu-latest
-    needs: TEMP
-    if: ${{ always() }}
-
-    env:
-      GH_TOKEN: ${{ github.token }}
 
     steps:
       - uses: actions/checkout@v4
@@ -66,179 +25,202 @@ jobs:
             target/
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-      # TODO abstract
-      - name: Download shell-language
-        run: |
-          mkdir bin
-          gh release download -R kaleidawave/experiments assets -p shell-language -D bin
-          ls -R .
-          chmod +x ./bin/shell-language
-          echo "$(pwd)/bin" >> "$GITHUB_PATH"
-
       - uses: brndnmtthws/rust-action-cargo-binstall@v1
         with:
-          packages: hyperfine
-
+          packages: hyperfine ripgrep
+      
       - name: Install valgrind
-        id: install-valgrind
-        continue-on-error: true
         run: sudo apt-get install valgrind
 
-      - name: Get latest version of demo.tsx
+      - name: Get last run
+        id: get-last-run
+        run: |
+          # First result should come up within 10 runs from main
+          id=$(gh api \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            '/repos/kaleidawave/ezno/actions/runs?branch=main&per_page=10' \
+            --jq '[.workflow_runs[] | select(.path == ".github/workflows/examples.yml")][0].id')
+          echo "run_id=$id" >> "$GITHUB_OUTPUT"
+        env:
+          GH_TOKEN: ${{ github.token }}
+
+      - name: Build Ezno
+        run: cargo build --release
+        env:
+          CARGO_PROFILE_RELEASE_DEBUG: true
+
+      - name: Get base ezno
+        if: github.ref_name != 'main'
         uses: actions/download-artifact@v4
         continue-on-error: true
-        id: download-demo-tsx
         with:
-          name: specification-${{ github.ref_name }}
-      
-      - name: Build latest version of demo.tsx
-        if: ${{ steps.download-demo-tsx.outcome == 'failure' }}
+          name: latest-checker
+          path: previous-ezno
+          run-id: ${{ steps.get-last-run.outputs.run_id }}
+
+      - name: Set compilers
+        id: compilers
+        shell: bash
         run: |
-          cargo run -p ezno-checker-specification \
-            --example amalgamate ./checker/specification/specification.md \
-            --comment-headers \
-            --out demo.tsx
+          if [ -d "previous-ezno" ]; then
+            echo "::notice::Comparing against previous"
+            echo "BINARIES=./target/release/ezno,./previous-ezno/ezno" >> "$GITHUB_OUTPUT"
+          else
+            echo "::notice::Running singularly"
+            echo "BINARIES=./target/release/ezno" >> "$GITHUB_OUTPUT"
+          fi
 
-      # get other binaries and last
-
-      - name: Get binaries to compare
-        uses: actions/download-artifact@v4
-        id: download-binaries
-        continue-on-error: true
-        with:
-          pattern: binary-${{ runner.os }}*
-          path: binaries
-          merge-multiple: true
-
-      - name: Build latest version of binaries
-        shell: shell-language {0}
+      - name: Run checker performance
+        shell: bash
         run: |
-          echo run cargo build --release
-          copy target/release/ezno binaries
+          # Generate a file which contains everything that Ezno currently implements  
+          cargo run -p ezno-parser \
+           --example code_blocks_to_script ./checker/specification/specification.md \
+           --comment-headers \
+           --out ./demo.tsx
 
-      # TEMP
-      - name: TEMP create 'binaries' folder
-        continue-on-error: true
-        run: |
-          mkdir -p binaries
-          ls -R binaries
+          echo "### Checking
+          \`\`\`shell
+          $(hyperfine -i -L compiler ${{ steps.compilers.outputs.BINARIES }} '{compiler} check demo.tsx')
+          \`\`\`" >> $GITHUB_STEP_SUMMARY
 
-      # start of performance
+          echo "<details>
+          <summary>Input</summary>
 
-      - name: Compare checker performance
-        shell: shell-language {0}
-        run: |
-          # Ensure binaries are executable
-          ee binaries
+          > Code generated from specification.md. this is not meant to accurately represent a program but instead give an idea for how it scales across all the type checking features
+          \`\`\`tsx
+          $(cat ./demo.tsx)
+          \`\`\`
+          </details>
+          " >> $GITHUB_STEP_SUMMARY
+
+          echo "::info::Wrote code to summary"
           
-          let to = env GITHUB_STEP_SUMMARY
-          let binaries = files "binaries/*"
-          let binaries = replace $binaries "\n" ","
-
-          echo "Found $binaries"
-
-          append $to "### Checking\n"
-          let output = run hyperfine -i -L binary $binaries './{binary} check demo.tsx'
-          append $to "```shell\n$output\n```"
-
-      - name: Print input
-        shell: shell-language {0}
-        run: |
-          let to = env GITHUB_STEP_SUMMARY
-          let content = read ./demo.tsx
-          append $to "<details><summary>Input</summary>\n"
-          append $to "```tsx\n$content\n```\n</details>"
+          command_output=$(./target/release/ezno check demo.tsx --timings --max-diagnostics all 2>&1 || true)
           
-      - name: Print diagnostics and statistics
-        id: performance
-        continue-on-error: true
-        shell: shell-language {0}
-        run: |
-          let to = env GITHUB_STEP_SUMMARY
-          for files "binaries/*" each
-            append $to "#### $file: `demo.tsx`"
-            let out = run "./$file" check demo.tsx --timings --max-diagnostics all --merge-stdout-and-stderr
+          diagnostics=""; statistics=""; found_splitter=false;
+          while IFS= read -r line; do
+              if [[ "$line" == "---"* ]]; then found_splitter=true;
+              elif [[ "$found_splitter"  == false ]]; then diagnostics+="$line"$'\n';
+              else statistics+="$line"$'\n'; fi
+          done <<< "$command_output"
 
-            let diagnostics = rbefore $out "---"
-            let statistics = rafter $out "---"
+          echo "<details>
+          <summary>Diagnostics</summary>
 
-            append $to "<details><summary>Diagnostics</summary>\n"
-            append $to "```$diagnostics\n```\n</details>"
-            append $to "<details><summary>Statistics</summary>\n"
-            append $to "```$statistics\n```\n</details>"
+          \`\`\`
+          $diagnostics
+          \`\`\`
+          </details>
+          " >> $GITHUB_STEP_SUMMARY
 
-      - name: Run checker performance on large file
-        shell: shell-language {0}
-        run: |
-          let demo = read "./demo.tsx"
-          let large = repeat $demo 10
-          write "./large.tsx" $large
-
-          let to = env GITHUB_STEP_SUMMARY
-          for files "binaries/*" each
-            append $to "#### $file: `large.tsx`"
-            echo "Running $file"
-            let out = run "./$file" check large.tsx --timings --merge-stdout-and-stderr
-
-            let statistics = rafter $out "---"
-            append $to "<details><summary>Statistics</summary>\n\n```$statistics\n```\n</details>"
+          if [ -d "previous-ezno" ]; then
+            OUT=$(./previous-ezno/ezno check demo.tsx --timings --max-diagnostics all 2>&1 || true)
+            $base_statistics=$(echo $OUT | rg "Diagnostics:" -A 100)
+            echo "
+            <details>
+            <summary>Statistics</summary>
             
-            let out = run hyperfine -i "./$file" check large.tsx
-            append $to "```shell\n$out\n```"
+            \`\`\`
+            $statistics
+            \`\`\`
+            against base
+            \`\`\`
+            $base_statistics
+            \`\`\`
+            against base
+            </details>
+            " >> $GITHUB_STEP_SUMMARY
+          else
+            echo "<details>
+            <summary>Statistics</summary>
 
-      - name: Valgrind and Callgrind statistics
-        shell: shell-language {0}
-        if: ${{ steps.install-valgrind.outcome == 'success' }}
+            \`\`\`
+            $statistics
+            \`\`\`
+            </details>" >> $GITHUB_STEP_SUMMARY
+          fi
+
+      - name: Run checker performance w/staging
+        shell: bash
+        if: github.ref_name != 'main'
+        run: |
+          echo "::group::Running with staging"
+          
+          cat ./checker/specification/specification.md ./checker/specification/staging.md > with-staging.md
+          cargo run -p ezno-parser --example code_blocks_to_script with-staging.md --comment-headers --out ./with-staging.tsx
+
+          ./target/release/ezno check with-staging.tsx --timings || true
+          ./target/release/ezno check with-staging.tsx --timings || true
+
+          echo "::endgroup::"
+            
+      - name: Run checker performance on large file
+        shell: bash
+        run: |
+          echo "::group::Running large"
+
+          cat ./checker/specification/specification.md > main.md
+          cargo run -p ezno-parser --example code_blocks_to_script main.md --comment-headers --out ./code.tsx
+
+          for i in {1..10}; do
+            cat ./code.tsx >> large.tsx
+          done
+
+          ./target/release/ezno check large.tsx --timings --max-diagnostics 0 || true
+
+          hyperfine -i -L compiler ${{ steps.compilers.outputs.BINARIES }} '{compiler} check large.tsx'
+          echo "::endgroup::"
+
+      - name: Valgrind and callgrind
+        shell: bash
         continue-on-error: true
         run: |
-          let to = env GITHUB_STEP_SUMMARY
-          for files "binaries/*" each
-            append $to "#### $file: instructions and memory usage"
+          IFS=',' read -ra ITEMS <<< ${{ steps.compilers.outputs.BINARIES }}
 
-            let output = run valgrind $file "./demo.tsx" --check --merge-stdout-and-stderr
-            let allocated = regexp $output "(?<bytes>[\\d,]+) bytes allocated" extract bytes
-            let allocated = replace $allocated "," ""
-            let allocated = format_number $allocated
+          export RUST_BACKTRACE=1
 
-            let output = run valgrind --tool=callgrind $file "./demo.tsx" --check --merge-stdout-and-stderr
-            let instructions = regexp $output "Collected : (?<name>\\d+?)\\b" extract name
-            let instructions = format_number $instructions
+          for compiler in ${ITEMS[@]}; do
+            echo "::group::Running $compiler"
+            
+            echo "::group::Callgrind"
+            {
+              valgrind --tool=callgrind --callgrind-out-file=./cpu-out $compiler check demo.tsx --max-diagnostics 0
+            } || true
+            ls
+            echo "::notice::CPU usage:$(rg "summary: (.*)" -or '$1' -N --color never ./cpu_out)"
+            echo "::endgroup::"
+            
+            echo "::group::Valgrind"
+            {
+              valgrind --log-file=memory-out $compiler check demo.tsx --max-diagnostics 0
+            } || true
+            echo "::notice::Memory usage:$(rg "([0-9,]*) bytes allocated" -or '$1' -N --color never memory-out)"
+            echo "::endgroup::"
 
-            append $to "- `$file`: `$allocated` allocated and $instructions` instructions"
+            echo "::endgroup::"
+          done
 
-      # final steps
+      - name: Run parsing & stringing (minfied) benchmarks
+        shell: bash
+        continue-on-error: true
+        run: |
+          CORPUS_URL="https://gist.githubusercontent.com/kaleidawave/6708f604bc403021b56cb54ea50cac62/raw/javascript_files.txt"
 
-      - name: Upload binaries
-        shell: shell-language {0}
-        run: copy target/releases/ezno binary-${{ runner.os }}${{ runner.arch }}-${{ 'general-fixes' }}-last
+          curl -s "$CORPUS_URL" | while IFS= read -r URL; do
+            FILENAME="${URL##*/}"
+            curl -s "$URL" > $FILENAME
+            echo "::group::Comparison"
+            hyperfine -i -L compiler ${{ steps.compilers.outputs.BINARIES }} \
+              '{compiler} ast-explorer full $FILENAME --check'
+            echo "::endgroup::"
+          done
 
-      # TEMP
-      - name: TEMP what context
-        run: echo '::debug::${{ toJson(github) }}'
-
-      - name: Upload current binary
+      - name: Upload checker
+        if: ${{ github.ref_name == 'main' }}
         uses: actions/upload-artifact@v4
         with:
-          # TODO TEMP branch
-          name: binary-${{ runner.os }}${{ runner.arch }}-${{ 'general-fixes' }}-last
-          path: binaries/ezno/binary-${{ runner.os }}${{ runner.arch }}-${{ 'general-fixes' }}-last
-          overwrite: true
-          retention-days: 30
-
-      # - name: Run parsing & stringing (minfied) benchmarks
-      #   shell: bash
-      #   continue-on-error: true
-      #   run: |
-      #     CORPUS_URL="https://gist.githubusercontent.com/kaleidawave/6708f604bc403021b56cb54ea50cac62/raw/javascript_files.txt"
-
-      #     curl -s "$CORPUS_URL" | while IFS= read -r URL; do
-      #       FILENAME="${URL##*/}"
-      #       curl -s "$URL" > $FILENAME
-      #       echo "::group::Comparison"
-      #       ${{ steps.compilers.outputs.BINARY }} ast-explorer full $FILENAME --check
-
-      #       # hyperfine -i -L compiler ${{ steps.compilers.outputs.BINARIES }} \
-      #       #   '{compiler} ast-explorer full $FILENAME --check'
-            
-      #       echo "::endgroup::"
-      #     done
+          name: latest-checker
+          path: target/release/ezno
+          retention-days: 90
