--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -34,7 +34,7 @@ full-typescript = []
 [dependencies]
 visitable-derive = { path = "./visitable-derive", version = "0.0.9", package = "ezno-parser-visitable-derive" }
 
-derive-finite-automaton = "0.2"
+derive-finite-automaton = "0.3"
 derive-debug-extras = { version = "0.3", features = [
   "auto-debug-single-tuple-inline",
 ] }
@@ -51,6 +51,7 @@ get-field-by-type = "0"
 macro_rules_attribute = { version = "0.2.0" }
 
 serde = { version = "1.0", features = ["derive"], optional = true }
+# Cannot move to "0.4" yet
 self-rust-tokenize = { version = "0.3", optional = true }
 
 source-map = { version = "0.15", features = [
@@ -59,7 +60,7 @@ source-map = { version = "0.15", features = [
 ] }
 
 [target.'cfg(target_family = "wasm")'.dependencies]
-tsify = "0.4.5"
+tsify = "0.5"
 wasm-bindgen = "0.2"
 
 [dev-dependencies]
