--- a/.github/workflows/commands.yml
+++ b/.github/workflows/commands.yml
@@ -29,7 +29,7 @@ env:
     target/
 
 jobs:
-  type_sizes:
+  type-sizes:
     runs-on: ${{ inputs.runs-on }}
     if: ${{ inputs.task == 'type-sizes' }}
     steps:
@@ -56,7 +56,7 @@ jobs:
       #     path: type-sizes.txt
       #     retention-days: 7
 
-  generate_binary:
+  generate-binary:
     runs-on: ubuntu-latest
     if: ${{ inputs.task == 'generate-binary' }}
     steps:
@@ -84,39 +84,39 @@ jobs:
           path: target/release/ezno
           retention-days: 30
 
-  generate_demo:
-    runs-on: ubuntu-latest
-    if: ${{ inputs.task == 'generate-binary' }}
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: ${{ inputs.ref }}
-      - uses: dtolnay/rust-toolchain@stable
-      - uses: actions/cache@v4
-        with:
-          path: ${{ env.CACHE_PATHS }}
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+  # generate-demo:
+  #   runs-on: ubuntu-latest
+  #   if: ${{ inputs.task == 'generate-binary' }}
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #       with:
+  #         ref: ${{ inputs.ref }}
+  #     - uses: dtolnay/rust-toolchain@stable
+  #     - uses: actions/cache@v4
+  #       with:
+  #         path: ${{ env.CACHE_PATHS }}
+  #         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
       
-      - name: Generate specification
-        run: |
-          # Generate a file which contains everything that the checker currently implements
-          # It is intentional that this will be on main branch if it is comparing, because we 
-          # do not want to include new tests
+  #     - name: Generate specification
+  #       run: |
+  #         # Generate a file which contains everything that the checker currently implements
+  #         # It is intentional that this will be on main branch if it is comparing, because we 
+  #         # do not want to include new tests
 
-          cargo run -p ezno-checker-specification \
-           --example amalgamate ./checker/specification/specification.md \
-           --comment-headers \
-           --out demo.tsx
-        env:
-          CARGO_PROFILE_RELEASE_DEBUG: true
+  #         cargo run -p ezno-checker-specification \
+  #          --example amalgamate ./checker/specification/specification.md \
+  #          --comment-headers \
+  #          --out demo.tsx
+  #       env:
+  #         CARGO_PROFILE_RELEASE_DEBUG: true
 
-      - uses: actions/upload-artifact@v4
-        with:
-          name: specification-${{ github.ref_name }}
-          path: demo.tsx
-          retention-days: 30
+  #     - uses: actions/upload-artifact@v4
+  #       with:
+  #         name: specification-${{ github.ref_name }}
+  #         path: demo.tsx
+  #         retention-days: 30
           
-  fix_up_commit:
+  fix-up-commit:
     runs-on: ubuntu-latest
     if: ${{ inputs.task == 'fix-up-commit' }}
     steps:
